--- a/assets/css/sass/_footer.scss
+++ b/assets/css/sass/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   padding: 70px 0;
-  background-color: rgba($color: $bink, $alpha: 0.1);
+  background-color: #e9f9fe;
   position: relative;
   z-index: 2;
 
