--- a/assets/css/sass/_variables.scss
+++ b/assets/css/sass/_variables.scss
@@ -7,7 +7,7 @@ $rtl: 'html[lang="ar"]';
 // colors
 $main: #213f7d;
 $bink: #2bc3f2;
-$sec: #2e60a9;
+$sec: #4f7ab8;
 $white: #fff;
 $white2: #5A5E5E;
 $white3: #fafafa;
