--- a/assets/css/sass/_global.scss
+++ b/assets/css/sass/_global.scss
@@ -27,7 +27,22 @@ body {
   font-family: "Almarai", sans-serif;
   font-family: "Cairo", sans-serif;
   overflow-x: hidden;
-  background-color: $white;
+  position: relative;
+
+  &::before {
+    content: ' ';
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.03;
+    background-image: url(../imgs/bg_5.png);
+    background-repeat: repeat;
+    background-size: cover;
+    z-index: -1;
+  }
 
   #{$ltr} & {
     direction: ltr;
