--- a/assets/css/sass/_global.scss
+++ b/assets/css/sass/_global.scss
@@ -27,22 +27,6 @@ body {
   font-family: "Almarai", sans-serif;
   font-family: "Cairo", sans-serif;
   overflow-x: hidden;
-  position: relative;
-
-  &::before {
-    content: ' ';
-    display: block;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.03;
-    background-image: url(../imgs/bg_5.png);
-    background-repeat: repeat;
-    background-size: cover;
-    z-index: -1;
-  }
 
   #{$ltr} & {
     direction: ltr;
@@ -51,6 +35,40 @@ body {
   #{$rtl} & {
     direction: rtl;
     text-align: right;
+  }
+}
+
+.section-has-pattarn {
+  position: relative;
+  background-color: #000;
+  z-index: 2;
+
+  &::before {
+    content: " ";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../imgs/slider_bg.jpg);
+    background-repeat: repeat;
+    background-size: cover;
+    z-index: -1;
+    opacity: .5;
+  }
+
+  &::after {
+    // content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    z-index: -1;
   }
 }
 
