--- a/assets/css/sass/_navbar.scss
+++ b/assets/css/sass/_navbar.scss
@@ -1,22 +1,37 @@
 .page-navbar {
   padding: 10px 0;
-  position: sticky;
-  top: 0;
-  background-color: $white;
+  position: fixed;
+  width: 100%;
+  // top: -2;
+  // background-color: $white;
   transition: $main-transition;
-  box-shadow: $sec-shadow;
-  z-index: 100;
+  // box-shadow: $sec-shadow;
+  z-index: 1040;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(9px);
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  border-end-end-radius: 20px;
+  border-end-start-radius: 20px;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 9px 7px;
 
   &.scroll {
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    background-color: rgba(0, 0, 0, 0.8);
-    padding: 20px 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    .dropdown-toggle {
+    
+      .drop-text {
+        color: $white;
+      }
+    
+      .drop-ic {
+        color: $white;
+      }
+    }
   }
 
   @media screen and (max-width: $screen-lg) {
     padding: 7px 0;
-    position: unset;
+    // position: unset;
   }
 
   .navbar-content {
@@ -26,7 +41,7 @@
       display: none;
       font-size: 16px;
       cursor: pointer;
-      color: $black;
+      color: $white;
 
       @media screen and (max-width: $screen-lg) {
         display: block;
@@ -50,7 +65,7 @@
     .logo {
       img {
         max-width: 90px;
-        
+
         @media (max-width: $screen-lg) {
           max-width: 80px;
         }
@@ -62,6 +77,9 @@
       align-items: center;
       gap: 23px;
       transition: all 0.8s cubic-bezier(0.68, -0.3, 0.265, 1.3);
+      flex: 1;
+      // justify-content: end;
+      @include dir-padding-left(50px);
 
       @media screen and (max-width: $screen-lg) {
         position: fixed;
@@ -71,10 +89,14 @@
         width: 280px;
         flex-direction: column;
         align-items: flex-start;
-        background-color: $white;
+        // background-color: $white;
         box-shadow: $nav-shadow;
         z-index: 2000;
         padding: 50px 20px;
+        -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(9px);
+  background-color: rgba(0,0,0, 0.9);
+  // border: 1px solid rgba(255, 255, 255, 0.6);
         #{$ltr} & {
           transform: translateX(-150%);
         }
@@ -102,7 +124,7 @@
       }
 
       .link {
-        color: $black;
+        color: $white;
         font-size: 16px;
         position: relative;
         font-weight: 600;
@@ -111,6 +133,7 @@
           display: block;
           flex-shrink: 0;
           width: fit-content;
+          // color: $main;
         }
 
         &::after {
@@ -134,8 +157,9 @@
 
         &.active,
         &:hover {
-          color: $sec;
-          &::after, &::before {
+          color: $white;
+          &::after,
+          &::before {
             width: 65%;
           }
         }
